tests/fixtures/invalid/pow_int_dict.py
# Cannot call pow() with Int, Dict[str, int]
x = pow(1, {"a": 1})
